rbutil: 1. Make Themesite integration work again 2. Fix FS#10055 (Theme sizes are 0) and FS#10061 (Incorrect Target missmatch detected) 3. Rename platform and voicename in rbutil.ini to reflect better what they are. (modelnames from either configure or the buildserver) 4. Fix a few places where they were used incorrectly
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20558 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -51,103 +51,103 @@ platform60=mrobe100
 
 [player]
 name="Jukebox Player 6000 / Jukebox Studio 5 / 10 / 20"
-platform=player
+buidserver_modelname=player
 bootloadermethod=none
 bootloadername=
 resolution=11x2x1
 manualname=
 brand=Archos
-voicename=player
+configure_modelname=player
 targetid=1
 encoder=lame
 
 [recorder]
 name="Jukebox Recorder 6 / 10 / 15 / 20"
-platform=recorder
+buidserver_modelname=recorder
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=
 brand=Archos
-voicename=recorder
+configure_modelname=recorder
 targetid=2
 encoder=lame
 
 [recorder8mb]
 name="Jukebox Recorder 6 / 10 / 15 / 20 (with 8MiB memory)"
-platform=recorder8mb
+buidserver_modelname=recorder8mb
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=rockbox-recorder
 brand=Archos
-voicename=recorder
+configure_modelname=recorder
 targetid=2
 encoder=lame
 
 [recorderv2]
 name="Jukebox Recorder v2 (20GB)"
-platform=recorderv2
+buidserver_modelname=recorderv2
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=
 brand=Archos
-voicename=recorderv2
+configure_modelname=recorderv2
 targetid=4
 encoder=lame
 
 [fmrecorder]
 name="Jukebox Recorder FM"
-platform=fmrecorder
+buidserver_modelname=fmrecorder
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=
 brand=Archos
-voicename=fmrecorder
+configure_modelname=fmrecorder
 targetid=3
 encoder=lame
 
 [fmrecorder8mb]
 name="Jukebox Recorder FM (with 8MiB memory)"
-platform=fmrecorder8mb
+buidserver_modelname=fmrecorder8mb
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=rockbox-fmrecorder
 brand=Archos
-voicename=fmrecorder
+configure_modelname=fmrecorder
 targetid=3
 encoder=lame
 
 [ondiosp]
 name="Ondio SP"
-platform=ondiosp
+buidserver_modelname=ondiosp
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=
 brand=Archos
-voicename=ondiosp
+configure_modelname=ondiosp
 targetid=7
 encoder=lame
 
 [ondiofm]
 name="Ondio FM"
-platform=ondiofm
+buidserver_modelname=ondiofm
 bootloadermethod=none
 bootloadername=
 resolution=112x64x1
 manualname=
 brand=Archos
-voicename=ondiofm
+configure_modelname=ondiofm
 targetid=8
 encoder=lame
 
 [h100]
 name="iHP100 / iHP110"
-platform=h100
+buidserver_modelname=h100
 bootloadermethod=hex
 bootloadername=/iriver/bootloader-h100.bin
 bootloaderfile=/ihp_100.hex
@@ -155,13 +155,13 @@ resolution=160x128x2
 manualname=rockbox-h100
 brand=Iriver
 usbid=0x10063001
-voicename=h100
+configure_modelname=h100
 targetid=11
 encoder=rbspeex
 
 [h120]
 name="iHP120 / iHP140 / H120 / H140"
-platform=h120
+buidserver_modelname=h120
 bootloadermethod=hex
 bootloadername=/iriver/bootloader-h120.bin
 bootloaderfile=/ihp_120.hex
@@ -169,13 +169,13 @@ resolution=160x128x2
 manualname=rockbox-h100
 brand=Iriver
 usbid=0x10063002
-voicename=h120
+configure_modelname=h120
 targetid=9
 encoder=rbspeex
 
 [h300]
 name="H320 / H340"
-platform=h300
+buidserver_modelname=h300
 bootloadermethod=hex
 bootloadername=/iriver/bootloader-h300.bin
 bootloaderfile=/H300.hex
@@ -183,13 +183,13 @@ resolution=220x176x16
 manualname=rockbox-h300
 brand=Iriver
 usbid=0x10063003
-voicename=h300
+configure_modelname=h300
 targetid=10
 encoder=rbspeex
 
 [h10_5gbums]
 name="H10 (5 / 6GB) UMS"
-platform=h10_5gb
+buidserver_modelname=h10_5gb
 bootloadermethod=mi4
 bootloadername=/iriver/H10.mi4
 bootloaderfile=/System/H10.mi4
@@ -197,13 +197,13 @@ resolution=128x128x16
 manualname=
 brand=Iriver
 usbid=0x41022002
-voicename=h10_5gb
+configure_modelname=h10_5gb
 targetid=24
 encoder=rbspeex
 
 [h10_5gbmtp]
 name="H10 (5 / 6GB) MTP"
-platform=h10_5gb
+buidserver_modelname=h10_5gb
 bootloadermethod=mi4
 bootloadername=/iriver/H10_5GB-MTP/H10.mi4
 bootloaderfile=/System/H10.mi4
@@ -211,13 +211,13 @@ resolution=128x128x16
 manualname=
 brand=Iriver
 usbid=0x41022105
-voicename=h10_5gb
+configure_modelname=h10_5gb
 targetid=24
 encoder=rbspeex
 
 [h10]
 name="H10 (20GB)"
-platform=h10
+buidserver_modelname=h10
 bootloadermethod=mi4
 bootloadername=/iriver/H10_20GC.mi4
 bootloaderfile=/System/H10_20GC.mi4
@@ -226,124 +226,124 @@ manualname=
 brand=Iriver
 usbid=0x0b7000ba
 usberror=0x41022101
-voicename=h10
+configure_modelname=h10
 targetid=22
 encoder=rbspeex
 
 [ipod1g2g]
 name="Ipod (1st / 2nd gen)"
-platform=ipod1g2g
+buidserver_modelname=ipod1g2g
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipod1g2g.ipod
 resolution=160x128x2
 manualname=
 brand=Apple
-voicename=ipod1g2g
+configure_modelname=ipod1g2g
 targetid=29
 encoder=rbspeex
 
 [ipodcolor]
 name="Ipod Color / Photo / U2 (4th gen)"
-platform=ipodcolor
+buidserver_modelname=ipodcolor
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodcolor.ipod
 resolution=220x176x16
 manualname=
 brand=Apple
-voicename=ipodcolor
+configure_modelname=ipodcolor
 targetid=13
 encoder=rbspeex
 
 [ipodnano]
 name="Ipod Nano (1st gen)"
-platform=ipodnano
+buidserver_modelname=ipodnano
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodnano.ipod
 resolution=176x132x16
 manualname=
 brand=Apple
 usbincompat=0x05ac1260
-voicename=ipodnano
+configure_modelname=ipodnano
 targetid=14
 encoder=rbspeex
 
 [ipod4gray]
 name="Ipod (4th gen, greyscale)"
-platform=ipod4gray
+buidserver_modelname=ipod4gray
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipod4g.ipod
 resolution=160x128x2
 manualname=
 brand=Apple
-voicename=ipod4gray
+configure_modelname=ipod4g
 targetid=17
 encoder=rbspeex
 
 [ipodvideo]
 name="Ipod Video (5th gen) 30GB"
-platform=ipodvideo
+buidserver_modelname=ipodvideo
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodvideo.ipod
 resolution=320x240x16
 manualname=
 brand=Apple
-voicename=ipodvideo
+configure_modelname=ipodvideo
 targetid=15
 encoder=rbspeex
 
 [ipodvideo64mb]
 name="Ipod Video (5th gen) 60/80GB"
-platform=ipodvideo64mb
+buidserver_modelname=ipodvideo64mb
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodvideo.ipod
 resolution=320x240x16
 manualname=
 brand=Apple
-voicename=ipodvideo
+configure_modelname=ipodvideo
 usbincompat=0x05ac1261
 targetid=15
 encoder=rbspeex
 
 [ipod3g]
 name="Ipod (3rd gen)"
-platform=ipod3g
+buidserver_modelname=ipod3g
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipod3g.ipod
 resolution=160x128x2
 manualname=
 brand=Apple
 usbid=0x05ac1201
-voicename=ipod3g
+configure_modelname=ipod3g
 targetid=16
 encoder=rbspeex
 
 [ipodmini1g]
 name="Ipod Mini (1st gen)"
-platform=ipodmini1g
+buidserver_modelname=ipodmini1g
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodmini.ipod
 resolution=138x110x2
 manualname=rockbox-ipodmini2g
 brand=Apple
-voicename=ipodmini1g
+configure_modelname=ipodmini
 targetid=18
 encoder=rbspeex
 
 [ipodmini2g]
 name="Ipod Mini (2nd gen)"
-platform=ipodmini2g
+buidserver_modelname=ipodmini2g
 bootloadermethod=ipod
 bootloadername=/ipod/bootloader-ipodmini2g.ipod
 resolution=138x110x2
 manualname=rockbox-ipodmini2g
 brand=Apple
-voicename=ipodmini2g
+configure_modelname=ipodmini2g
 targetid=21
 encoder=rbspeex
 
 [iaudiox5]
 name="iAudio X5 / X5L"
-platform=iaudiox5
+buidserver_modelname=iaudiox5
 bootloadermethod=file
 bootloadername=/iaudio/x5_fw.bin
 bootloaderfile=/FIRMWARE/x5_fw.bin
@@ -351,26 +351,26 @@ resolution=160x128x16
 manualname=
 brand=Cowon
 usbid=0x0e210510, 0x0e210513
-voicename=iaudiox5
+configure_modelname=x5
 targetid=12
 encoder=rbspeex
 
 [iaudiox5v]
 name="iAudio X5V"
-platform=iaudiox5
+buidserver_modelname=iaudiox5
 bootloadermethod=file
 bootloadername=/iaudio/x5v_fw.bin
 bootloaderfile=/FIRMWARE/x5v_fw.bin
 resolution=160x128x2
 manualname=
 brand=Cowon
-voicename=iaudiox5v
+configure_modelname=x5
 targetid=12
 encoder=rbspeex
 
 [iaudiom5]
 name="iAudio M5 / M5L"
-platform=iaudiom5
+buidserver_modelname=iaudiom5
 bootloadermethod=file
 bootloadername=/iaudio/m5_fw.bin
 bootloaderfile=/FIRMWARE/m5_fw.bin
@@ -378,13 +378,13 @@ resolution=160x128x2
 manualname=
 brand=Cowon
 usbid=0x0e210520
-voicename=iaudiom5
+configure_modelname=m5
 targetid=28
 encoder=rbspeex
 
 [iaudiom3]
 name="iAudio M3 / M3L"
-platform=iaudiom3
+buidserver_modelname=iaudiom3
 bootloadermethod=file
 bootloadername=/iaudio/cowon_m3.bin
 bootloaderfile=/FIRMWARE/cowon_m3.bin
@@ -392,13 +392,13 @@ resolution=128x96x2
 manualname=
 brand=Cowon
 usbid=0x0e210500
-voicename=iaudiom3
+configure_modelname=m3
 targetid=37
 encoder=rbspeex
 
 [gigabeatf]
 name="Gigabeat F / X"
-platform=gigabeatf
+buidserver_modelname=gigabeatf
 bootloadermethod=file
 bootloadername=/gigabeat/FWIMG01.DAT
 bootloaderfile=/GBSYSTEM/FWIMG/FWIMG01.DAT
@@ -406,13 +406,13 @@ resolution=240x320x16
 manualname=
 brand=Toshiba
 usbid=0x09300009
-voicename=gigabeatf
+configure_modelname=gigabeatf
 targetid=20
 encoder=rbspeex
 
 [sansae200]
 name="Sansa E200"
-platform=sansae200
+buidserver_modelname=sansae200
 bootloadermethod=sansa
 bootloadername=/sandisk-sansa/e200/PP5022.mi4
 resolution=176x220x16
@@ -421,26 +421,26 @@ brand=Sandisk
 usbid=0x07817421
 usberror=0x07810720
 usbincompat=0x07817422, 0x07817423
-voicename=sansae200
+configure_modelname=e200
 targetid=23
 encoder=rbspeex
 
 [sansac200]
 name="Sansa C200"
-platform=sansac200
+buidserver_modelname=sansac200
 bootloadermethod=sansa
 bootloadername=/sandisk-sansa/c200/firmware.mi4
 resolution=132x80x16
 manualname=
 brand=Sandisk
 usbid=0x07817450, 0x07817451
-voicename=sansac200
+configure_modelname=c200
 targetid=30
 encoder=rbspeex
 
 [mrobe100]
 name="m:robe100"
-platform=mrobe100
+buidserver_modelname=mrobe100
 bootloadermethod=mi4
 bootloadername=/olympus/mrobe100/pp5020.mi4
 bootloaderfile=/System/pp5020.mi4
@@ -448,7 +448,7 @@ resolution=160x128x1
 manualname=
 brand=Olympus
 usbid=0x07b40280
-voicename=mrobe100
+configure_modelname=mrobe100
 targetid=33
 encoder=rbspeex
 
