--- a/apps/plugins/viewers.config
+++ b/apps/plugins/viewers.config
@@ -42,6 +42,7 @@ ppm,viewers/ppmviewer,2
 *,viewers/properties,-
 colours,apps/text_editor,11
 ssg,games/superdom,-
+cells,games/rocklife,-
 link,viewers/shortcuts_view,-
 *,viewers/shortcuts_append,-
 *,apps/md5sum,-
