Rename display names for Sansas to include "series" to make it more clear that it's not a player model "e200". Change casing of e200 / c200 to lowercase to be in line with the actual print on the player. Include "v1" to be more specific.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20815 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -411,7 +411,7 @@ targetid=20
 encoder=rbspeex
 
 [sansae200]
-name="Sansa E200"
+name="Sansa e200v1 series"
 buildserver_modelname=sansae200
 bootloadermethod=sansa
 bootloadername=/sandisk-sansa/e200/PP5022.mi4
@@ -426,7 +426,7 @@ targetid=23
 encoder=rbspeex
 
 [sansac200]
-name="Sansa C200"
+name="Sansa c200v1 series"
 buildserver_modelname=sansac200
 bootloadermethod=sansa
 bootloadername=/sandisk-sansa/c200/firmware.mi4
