Add core JPEG reader, adapted from the JPEG plugin's decoder, with some changes to prevent include conflicts between the two decoders.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20836 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/plugins/viewers.config
+++ b/apps/plugins/viewers.config
@@ -27,6 +27,9 @@ wav,viewers/wavplay,9
 wav,viewers/wavview,10
 wav,viewers/test_codec,-
 bmp,viewers/test_greylib_bitmap_scale,-
+jpeg,viewers/test_core_jpeg,-
+jpe,viewers/test_core_jpeg,-
+jpg,viewers/test_core_jpeg,-
 bmp,apps/rockpaint,11
 bmp,games/sliding_puzzle,11
 mpg,viewers/mpegplayer,4
