Plugin JPEG decoder for data in memory, along with test_mem_jpeg.c and bench_mem_jpeg.c plugins to test and benchmark it, and a line-length clean up in jpeg_load.c.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20871 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/plugins/viewers.config
+++ b/apps/plugins/viewers.config
@@ -30,6 +30,12 @@ bmp,viewers/test_greylib_bitmap_scale,-
 jpeg,viewers/test_core_jpeg,-
 jpe,viewers/test_core_jpeg,-
 jpg,viewers/test_core_jpeg,-
+jpeg,viewers/test_mem_jpeg,-
+jpe,viewers/test_mem_jpeg,-
+jpg,viewers/test_mem_jpeg,-
+jpeg,viewers/bench_mem_jpeg,-
+jpe,viewers/bench_mem_jpeg,-
+jpg,viewers/bench_mem_jpeg,-
 bmp,apps/rockpaint,11
 bmp,games/sliding_puzzle,11
 mpg,viewers/mpegplayer,4
