Patch by Mohamed Tarek from FS#10182 - remove avcodec.h as it is no longer needed.  Also remove -lm from Makefile.test for the same reason.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20909 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/codecs/libcook/Makefile.test
+++ b/apps/codecs/libcook/Makefile.test
@@ -1,7 +1,7 @@
 CFLAGS = -Wall -O3
 OBJS = main.o bitstream.o cook.o libavutil/log.o libavutil/mem.o libavutil/lfg.o libavutil/md5.o rm2wav.o
 cooktest: $(OBJS)
-	gcc -o cooktest $(OBJS) -lm
+	gcc -o cooktest $(OBJS)
 
 .c.o :
 	$(CC) $(CFLAGS) -c -o $@ $<
