-Remove calls to av_log() and use DEBUGF/printf instead, thuse removing libavutil/log.[c/h] and libavutil/avutil.h. -Take necessary defines to bitstream.h from libavutil/intreadwrite.h to remove the latter.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20918 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/codecs/libcook/Makefile.test
+++ b/apps/codecs/libcook/Makefile.test
@@ -1,5 +1,5 @@
 CFLAGS = -Wall -O3
-OBJS = main.o bitstream.o cook.o libavutil/log.o libavutil/mem.o rm2wav.o
+OBJS = main.o bitstream.o cook.o libavutil/mem.o rm2wav.o
 cooktest: $(OBJS)
 	gcc -o cooktest $(OBJS)
 
