Move rm.[c/h] from libcook to librm. No functional changes.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21066 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/codecs/libcook/Makefile.test
+++ b/apps/codecs/libcook/Makefile.test
@@ -1,5 +1,5 @@
 CFLAGS = -Wall -O3
-OBJS = main.o bitstream.o cook.o rm.o
+OBJS = main.o bitstream.o cook.o ../librm/rm.o
 cooktest: $(OBJS)
 	gcc -o cooktest $(OBJS)
 
