Add usb ids for third and fourth gen nanos to the list of unsupported targets
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21156 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -262,7 +262,7 @@ bootloadername=/ipod/bootloader-ipodnano.ipod
 resolution=176x132x16
 manualname=
 brand=Apple
-usbincompat=0x05ac1260
+usbincompat=0x05ac1260, 0x05ac1262, 0x05ac1263
 configure_modelname=ipodnano
 targetid=14
 encoder=rbspeex
