Allow building beastpatcher with libmtp 0.2.[0-5].
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21249 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/MTP/beastpatcher/Makefile
+++ b/utils/MTP/beastpatcher/Makefile
@@ -19,6 +19,9 @@ LIBS = /usr/lib/libmtp.a /usr/lib/libusb.a
 CFLAGS += $(shell printf \
 	'\#include <libmtp.h>\nlibmtp version: LIBMTP_VERSION\n' | \
 	gcc -E -P - -o - | grep -q '^libmtp version: 0\.2' && echo '-DOLDMTP')
+CFLAGS += $(shell printf \
+	'\#include <libmtp.h>\nlibmtp version: LIBMTP_VERSION\n' | \
+	gcc -E -P - -o - | grep -q '^libmtp version: 0\.2\.[0-5]' && echo '-DREALLYOLDMTP')
 endif
 WINLIBS = ../MTP_DLL.dll
 
