Implement sendfirm functionality in beastpatcher. Set svn:eol-style properties.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21260 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/MTP/beastpatcher/Makefile
+++ b/utils/MTP/beastpatcher/Makefile
@@ -30,22 +30,22 @@ CC = $(CROSS)gcc
 
 all: $(OUTPUT)
 
-beastpatcher: beastpatcher.c bootimg.c mtp_common.h mtp_libmtp.c
-	gcc $(CFLAGS) -o beastpatcher beastpatcher.c bootimg.c mtp_libmtp.c $(LIBS)
+beastpatcher: beastpatcher.c bootimg.c mtp_common.h mtp_libmtp.c main.c
+	gcc $(CFLAGS) -o beastpatcher beastpatcher.c bootimg.c mtp_libmtp.c main.c $(LIBS)
 	strip beastpatcher
 
-beastpatcher.exe:  beastpatcher.c bootimg.c mtp_common.h mtp_win32.c $(WINLIBS)
-	$(CC) $(CFLAGS) -o beastpatcher.exe beastpatcher.c bootimg.c mtp_win32.c $(WINLIBS)
+beastpatcher.exe:  beastpatcher.c bootimg.c mtp_common.h mtp_win32.c main.c $(WINLIBS)
+	$(CC) $(CFLAGS) -o beastpatcher.exe beastpatcher.c bootimg.c mtp_win32.c main.c $(WINLIBS)
 	$(CROSS)strip beastpatcher.exe
 
 beastpatcher-mac: beastpatcher-i386 beastpatcher-ppc
 	lipo -create beastpatcher-ppc beastpatcher-i386 -output beastpatcher-mac
 
-beastpatcher-i386:  beastpatcher.c  bootimg.c usb.h libusb-i386.a
+beastpatcher-i386:  beastpatcher.c  bootimg.c usb.h main.c libusb-i386.a
 	$(CC) -isysroot /Developer/SDKs/MacOSX10.4u.sdk -mmacosx-version-min=10.4 -framework iokit -framework coreservices -arch i386 $(CFLAGS) -o beastpatcher-i386 beastpatcher.c bootimg.c -I. libusb-i386.a
 	strip beastpatcher-i386
 
-beastpatcher-ppc: beastpatcher.c bootimg.c usb.h libusb-ppc.a
+beastpatcher-ppc: beastpatcher.c bootimg.c usb.h main.c libusb-ppc.a
 	$(CC) -isysroot /Developer/SDKs/MacOSX10.4u.sdk -mmacosx-version-min=10.4 -framework iokit -framework coreservices -arch ppc $(CFLAGS) -o beastpatcher-ppc beastpatcher.c bootimg.c -I. libusb-ppc.a
 	strip beastpatcher-ppc
 
