Don't rebuild rbspeex(enc|dec) everytime when making voice files.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21265 a1c6a512-1295-4272-9138-f99709370657

--- a/tools/rbspeex/Makefile
+++ b/tools/rbspeex/Makefile
@@ -45,7 +45,7 @@ DIRS =
 
 all: ../rbspeexenc ../rbspeexdec
 
-$(DEPFILE): $(SOURCES) $(OUT)
+$(DEPFILE): $(SOURCES)
 	$(SILENT)rm -f $(DEPFILE)
 	$(SILENT)(for each in $(SOURCES) x; do \
 	    if test "x" != "$$each"; then \
