jz4740_tools : bin2c.c location has changed
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21356 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/jz4740_tools/Makefile
+++ b/utils/jz4740_tools/Makefile
@@ -8,11 +8,11 @@ CC=gcc
 linux: usbtool HXFmerge HXFreplace HXFsplit IHFSsplit HXF2IHFS DLanalyser
 win: usbtool_win HXFmerge_win HXFsplit_win HXFreplace_win IHFSsplit_win HXF2IHFS_win DLanalyser_win
 
-bin2c: ../../rbutil/sansapatcher/bin2c.c
-	$(CC) $(CFLAGS) -o bin2c ../../rbutil/sansapatcher/bin2c.c
+bin2c: ../../rbutil/tools/bin2c.c
+	$(CC) $(CFLAGS) -o bin2c ../../rbutil/tools/bin2c.c
 
-bin2c.exe: ../../rbutil/sansapatcher/bin2c.c
-	$(CC) $(CFLAGS) -o bin2c.exe ../../rbutil/sansapatcher/bin2c.c
+bin2c.exe: ../../rbutil/tools/bin2c.c
+	$(CC) $(CFLAGS) -o bin2c.exe ../../rbutil/tools/bin2c.c
 
 jz_xloader.c: jz_xloader.bin
 	./bin2c jz_xloader.bin jz_xloader
