Add an explicit rule to compile bin2c - r21272 broke compilation of sansapatcher on at least Linux because Make's implicit rule for compiling bin2c was being used, which uses CC, which was set to i586-mingw32msvc-gcc.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21476 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/sansapatcher/Makefile
+++ b/rbutil/sansapatcher/Makefile
@@ -48,5 +48,8 @@ bootimg_c200.c: firmware.mi4 ../tools/bin2c
 bootimg_e200.c: PP5022.mi4 ../tools/bin2c
 	../tools/bin2c PP5022.mi4 bootimg_e200
 
+../tools/bin2c:
+	make -C ../tools bin2c
+
 clean:
 	rm -f sansapatcher.exe sansapatcher-mac sansapatcher-i386 sansapatcher-ppc sansapatcher bootimg_c200.c bootimg_c200.h bootimg_e200.c bootimg_e200.h *~
